@@ -1,3 +1,8 @@
+2009-12-09 Chris Allegretta <chrisa@asty.org>
+	* files.c (read_file) - Add parameter for whether we should even try to check
+	  file writability, as the message is useless when we're inserting into an 
+	  existing buffer.  Fixes Savannah bug 28219.
+
 2009-12-07 David Lawrence Ramsey <pooka109@gmail.com>
 	* global.c (shortcut_init): Many fixes for keybindings code oversights, including
 	  restore page up/down and GotoDir to browser, 
